syntax = "proto2";
package pb;


/*
消息后缀说明：
Notify      :服务端向单个客户端发通知
Request     :客户端向服务器发请求
Response    :服务端回应客户端的请求
Broadcast   :服务端群发广播
*/


// ----------------------------------------------------------------------------
// login

message RegisterRequest {
    optional int32      OP              = 1 [default = 1001 ];
    required string     name            = 2;    // 昵称
}

message RegisterResponse {
    optional int32      OP              = 1 [default = 1002 ];
    required int32      errCode         = 2;
}

message SitRequest {
    optional int32      OP              = 1 [default = 1003 ];
    required uint32     match_id        = 2;    // 比赛ID
}

message SitResponse {
    optional int32      OP              = 1 [default = 1004 ];
    required int32      errCode         = 2;
}


// ----------------------------------------------------------------------------
// ddz logic

message Cards {
    repeated int32      cards           = 1;    // 一手牌
}

// 发牌通知
message DealCardNotify {
    optional int32      OP              = 1 [default = 2001 ];
    required int32      pos             = 2;    // 我的方位
    repeated int32      cards           = 3;    // 我的牌
}

// 叫分广播
message CallScoreBroadcast {
    optional int32      OP              = 1 [default = 2002 ];
    required int32      pos             = 2;    // 该谁叫分
    repeated int32      history         = 3;    // 历史叫分记录
}

// 叫分请求
message CallScoreRequest {
    optional int32      OP              = 1 [default = 2003 ];
    required int32      score           = 2;    // 叫了多少分 (0 ~ 3)
}

// 叫分回应
message CallScoreResponse {
    optional int32      OP              = 1 [default = 2004 ];
    required int32      errCode         = 2;    // 叫分结果
}

// 叫分广播
message CallScoreResultBroadcast {
    optional int32      OP              = 1 [default = 2005 ];
    required int32      pos             = 2;    // 谁
    required int32      score           = 3;    // 叫了多少分
}

// 叫分结算广播
message CallScoreCalcBroadcast {
    optional int32      OP              = 1 [default = 2006 ];
    required bool       draw            = 2;    // 是否流局 
    required int32      lord            = 3;    // 地主方位
    required int32      score           = 4;    // 最终叫分
    repeated int32      cards           = 5;    // 底牌
}

// 出牌广播
message PlayBroadcast {
    optional int32      OP              = 1 [default = 2007 ];
    required int32      pos             = 2;    // 位置
    required bool       first           = 3;    // 首出
    repeated Cards      history         = 4;    // 本轮历史出牌记录
}

// 出牌请求
message PlayRequest {
    optional int32      OP              = 1 [default = 2008 ];
    repeated int32      cards           = 2;
}

// 出牌回应
message PlayResponse {
    optional int32      OP              = 1 [default = 2009 ];
    required int32      errCode         = 2;    // 出牌结果
}

// 出牌结果通知
message PlayResultBroadcast {
    optional int32      OP              = 1 [default = 2010 ];
    required int32      pos             = 2;
    repeated int32      cards           = 3;
}

message DeckEndBroadcast {
    optional int32      OP              = 1 [default = 2011 ];
    repeated int32      score           = 2;    // 东南西得分
}
